--- a/style/global.css
+++ b/style/global.css
@@ -92,6 +92,11 @@ ul[role="list"] {
     list-style: none;
 }
 
+img {
+    display: inline-block;
+    max-width: 100%;
+}
+
 @media (width >= 80em) {
     :root {
         --fs-lg: 2rem;
